--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-aiogram==2.25.1
-aiohttp==3.7.4.post0  # старая версия для совместимости
+aiogram==2.25.1  # или более старая версия
+aiohttp==3.7.4.post0  # старая версия для совместимости с aiogram
 python-dotenv==0.21.0
