--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 aiogram==2.23.0
-aiohttp==3.7.3
+pip install --index-url https://pypi.org/simple --trusted-host pypi.org --trusted-host pypi.python.org --no-cache-dir -r requirements.txt
 python-dotenv==0.18.0
