--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:mainbot]
-command=python /app/main_bot.py
+command=python /app/mtrepo.py
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/mainbot.err.log
