--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,16 +1,16 @@
 [supervisord]
 nodaemon=true
 
-[program:mainbot]
+[program:mtrepo]
 command=python /app/mtrepo.py
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/mainbot.err.log
-stdout_logfile=/var/log/mainbot.out.log
+stderr_logfile=/app/logs/mtrepo.err.log
+stdout_logfile=/app/logs/mtrepo.out.log
 
 [program:userbot]
 command=python /app/userbot.py
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/userbot.err.log
-stdout_logfile=/var/log/userbot.out.log
+stderr_logfile=/app/logs/userbot.err.log
+stdout_logfile=/app/logs/userbot.out.log
